--- a/paper/ecir25-longeval-lit.bib
+++ b/paper/ecir25-longeval-lit.bib
@@ -5,6 +5,17 @@
   year={2003}
 }
 
+@book{chuklin:2015,
+  author       = {Aleksandr Chuklin and Ilya Markov and Maarten de Rijke},
+  title        = {Click Models for Web Search},
+  series       = {Synthesis Lectures on Information Concepts, Retrieval, and Services},
+  publisher    = {Morgan {\&} Claypool Publishers},
+  year         = {2015},
+  url          = {https://doi.org/10.2200/S00654ED1V01Y201507ICR043},
+  doi          = {10.2200/S00654ED1V01Y201507ICR043}
+}
+
+
 @InProceedings{froebe:2021a,
   author =                   {Maik Fr{\"o}be and Janek Bevendorff and Lukas Gienapp and Michael V{\"o}lske and Benno Stein and Martin Potthast and Matthias Hagen},
   booktitle =                {44th International ACM Conference on Research and Development in Information Retrieval (SIGIR 2021)},
@@ -87,42 +98,36 @@
   doi          = {10.1145/3511808.3557068}
 }
 
+@book{liu:2011,
+  author       = {Tie{-}Yan Liu},
+  title        = {Learning to Rank for Information Retrieval},
+  publisher    = {Springer},
+  year         = {2011},
+  url          = {https://doi.org/10.1007/978-3-642-14267-3},
+  doi          = {10.1007/978-3-642-14267-3},
+  isbn         = {978-3-642-14266-6}
+}
+
+@book{lin:2021,
+  author       = {Jimmy Lin and Rodrigo Frassetto Nogueira and Andrew Yates},
+  title        = {Pretrained Transformers for Text Ranking: {BERT} and Beyond},
+  series       = {Synthesis Lectures on Human Language Technologies},
+  publisher    = {Morgan {\&} Claypool Publishers},
+  year         = {2021},
+  doi          = {10.2200/S01123ED1V01Y202108HLT053},
+  isbn         = {978-3-031-01053-8}
+}
 
 @inproceedings{alkhalifa:2024,
-  author       = {Rabab Alkhalifa and
-                  Hsuvas Borkakoty and
-                  Romain Deveaud and
-                  Alaa El{-}Ebshihy and
-                  Luis Espinosa Anke and
-                  Tobias Fink and
-                  Petra Galusc{\'{a}}kov{\'{a}} and
-                  Gabriela Gonz{\'{a}}lez S{\'{a}}ez and
-                  Lorraine Goeuriot and
-                  David Iommi and
-                  Maria Liakata and
-                  Harish Tayyar Madabushi and
-                  Pablo Medina{-}Alias and
-                  Philippe Mulhem and
-                  Florina Piroi and
-                  Martin Popel and
-                  Arkaitz Zubiaga},
-  editor       = {Guglielmo Faggioli and
-                  Nicola Ferro and
-                  Petra Galusc{\'{a}}kov{\'{a}} and
-                  Alba Garc{\'{\i}}a Seco de Herrera},
-  title        = {Extended Overview of the {CLEF} 2024 LongEval Lab on Longitudinal
-                  Evaluation of Model Performance},
-  booktitle    = {Working Notes of the Conference and Labs of the Evaluation Forum {(CLEF}
-                  2024), Grenoble, France, 9-12 September, 2024},
+  author       = {Rabab Alkhalifa and Hsuvas Borkakoty and Romain Deveaud and Alaa El{-}Ebshihy and Luis Espinosa Anke and Tobias Fink and Petra Galusc{\'{a}}kov{\'{a}} and Gabriela Gonz{\'{a}}lez S{\'{a}}ez and Lorraine Goeuriot and David Iommi and Maria Liakata and Harish Tayyar Madabushi and Pablo Medina{-}Alias and Philippe Mulhem and Florina Piroi and Martin Popel and Arkaitz Zubiaga},
+  editor       = {Guglielmo Faggioli and Nicola Ferro and Petra Galusc{\'{a}}kov{\'{a}} and Alba Garc{\'{\i}}a Seco de Herrera},
+  title        = {Extended Overview of the {CLEF} 2024 LongEval Lab on Longitudinal Evaluation of Model Performance},
+  booktitle    = {Working Notes of the Conference and Labs of the Evaluation Forum {(CLEF} 2024), Grenoble, France, 9-12 September, 2024},
   series       = {{CEUR} Workshop Proceedings},
   volume       = {3740},
   pages        = {2267--2289},
   publisher    = {CEUR-WS.org},
-  year         = {2024},
-  url          = {https://ceur-ws.org/Vol-3740/paper-213.pdf},
-  timestamp    = {Wed, 21 Aug 2024 22:46:00 +0200},
-  biburl       = {https://dblp.org/rec/conf/clef/AlkhalifaBDEAFG24.bib},
-  bibsource    = {dblp computer science bibliography, https://dblp.org}
+  year         = {2024}
 }
 
 @inproceedings{keller:2024b,
@@ -140,33 +145,21 @@
   file = {/Users/jueri/Zotero/storage/J8I7KZFT/Keller et al. - 2024 - Leveraging prior relevance signals in web search.pdf}
 }
 
-
 @book{robertson:1994,
   title = {Okapi at {{TREC-3}}.},
   author = {Robertson, Stephen and Walker, Steve and Jones, Susan and {Hancock-Beaulieu}, Micheline and Gatford, Mike},
   year = {1994},
-  month = jan,
-  abstract = {The Okapi system comprises a search engine or basic search system (BSS), a low level interface used mainly for batch runs and a user interface for the manual search experiments, together with data conversion and inversion utilities. This paper reports on City University's work on the TREC-2 project from its commencement up to November 1993. It includes many results which were obtained after the August 1993 deadline for submission of official results.},
-  file = {/Users/jueri/Zotero/storage/9GG8ETNH/okapi_trec3.pdf}
+  month = jan
 }
 
-
 @inproceedings{chapelle:2009,
-  author       = {Olivier Chapelle and
-                  Ya Zhang},
-  editor       = {Juan Quemada and
-                  Gonzalo Le{\'{o}}n and
-                  Yo{\"{e}}lle S. Maarek and
-                  Wolfgang Nejdl},
+  author       = {Olivier Chapelle and Ya Zhang},
+  editor       = {Juan Quemada and Gonzalo Le{\'{o}}n and Yo{\"{e}}lle S. Maarek and Wolfgang Nejdl},
   title        = {A dynamic bayesian network click model for web search ranking},
-  booktitle    = {Proceedings of the 18th International Conference on World Wide Web,
-                  {WWW} 2009, Madrid, Spain, April 20-24, 2009},
+  booktitle    = {Proceedings of the 18th International Conference on World Wide Web, {WWW} 2009, Madrid, Spain, April 20-24, 2009},
   pages        = {1--10},
   publisher    = {{ACM}},
   year         = {2009},
   url          = {https://doi.org/10.1145/1526709.1526711},
-  doi          = {10.1145/1526709.1526711},
-  timestamp    = {Mon, 11 Mar 2024 13:45:27 +0100},
-  biburl       = {https://dblp.org/rec/conf/www/ChapelleZ09.bib},
-  bibsource    = {dblp computer science bibliography, https://dblp.org}
+  doi          = {10.1145/1526709.1526711}
 }
