--- a/paper/ecir25-longeval-part1.tex
+++ b/paper/ecir25-longeval-part1.tex
@@ -1,14 +1,10 @@
 \section{Introduction}
 
-Many of the queries a search engine receives have been seen before {\color{red}[CITATION]}. By analyzing how users interact with the displayed results for these queries, valuable relevance information can be gathered. Such signals can be directly leveraged to improve the search engine's effectiveness. For example, based on the documents users click for a query, click models can be constructed that synthesize a relevance indicator. Based on these created labels, documents can be boosted or rerankers trained. While relevance feedback has shown to be effective, exploiting it as a boosting feature directly has a limited application since the relevance signal does not naturally generalize to new topics and documents and may lead to unwanted biases. 
+Many of the queries a search engine receives have been seen before {\color{red}[CITATION]}. By analyzing how users interact with the displayed results for these queries, valuable relevance information can be gathered. Such signals can be used to improve the search engine's effectiveness, e.g., by constructing click models that synthesize a relevance indicator~\cite{chuklin:2015}. These synthesized labels can be used to boost documents~\cite{keller:2024b}, to train learning-to-rank models~\cite{liu:2011}, or to fine-tune transformer models~\cite{lin:2021}. While the training and fine-tuning require huge amounts of labeled data, boosting also works with few labels~\cite{keller:2024b}. However, time plays a crucial role in this scenario, as queries, documents, and relevance may evolve~\cite{keller:2024}. For instance, boosting would fail if documents change their content so that they are not relevant to the query anymore.
 
-Time plays a crucial role since the queries, documents, and even the relevance may evolve over time. Documents may change their content, queries their intent, and even if both are static, the relevance may change because of external factors.
+To address these challenges, we explore how previous relevance labels can be used for query expansion in a temporal setting. Therefore, we first describe different classes of temporal changes in the web search setting and propose to create key queries based on the previously relevant documents. {\color{red} Describe all approaches.}
 
-To address these challenges, we explore how previous relevance labels can be used for query expansion in a temporal setting. Therefore, we first describe different classes of temporal changes in the web search setting and propose to create key queries based on the previously relevant documents.
-
-{\color{red}[key query introduction]}
-
-In an initial experimental evaluation we compare the key query approach to different query expansion and pseudo relevance feedback baselines on the evolving LongEval test collection. The results indicate that through these methods, we can exploit relevance feedback beyond known query document pairs to new documents. 
+In an initial experimental evaluation we compare the key query approach to different query expansion and pseudo relevance feedback baselines on the evolving LongEval test collection. The results indicate that through these methods, we can exploit relevance feedback beyond known query document pairs to new documents. {\color{red} Describe experiments and results. Code available.}
 
 
 
