--- a/paper/ecir25-longeval-lit.bib
+++ b/paper/ecir25-longeval-lit.bib
@@ -145,6 +145,18 @@
   file = {/Users/jueri/Zotero/storage/J8I7KZFT/Keller et al. - 2024 - Leveraging prior relevance signals in web search.pdf}
 }
 
+@inproceedings{macdonald:2020,
+  author       = {Craig Macdonald and Nicola Tonellotto},
+  editor       = {Krisztian Balog and Vinay Setty and Christina Lioma and Yiqun Liu and Min Zhang and Klaus Berberich},
+  title        = {Declarative Experimentation in Information Retrieval using PyTerrier},
+  booktitle    = {{ICTIR} '20: The 2020 {ACM} {SIGIR} International Conference on the Theory of Information Retrieval, Virtual Event, Norway, September 14-17, 2020},
+  pages        = {161--168},
+  publisher    = {{ACM}},
+  year         = {2020},
+  doi          = {10.1145/3409256.3409829},
+}
+
+
 @book{robertson:1994,
   title = {Okapi at {{TREC-3}}.},
   author = {Robertson, Stephen and Walker, Steve and Jones, Susan and {Hancock-Beaulieu}, Micheline and Gatford, Mike},
