--- a/paper/ecir25-longeval-part2.tex
+++ b/paper/ecir25-longeval-part2.tex
@@ -13,6 +13,8 @@
     \end{tabularx}
 \end{table}
 
+\paragraph{Temporal Information Retrieval}
+
 Changes in evolving test collections are classified on a high level along theire main components, the documents, topics, and qrels, and the create, update, and delete operation of persistent storage by Keller et al. in~\cite{keller:2024}. Based on this classification schema different retrieval scenarios emerge that can be quantified on different levels and directly related to challenges IR systems face.
 
 
@@ -24,4 +26,13 @@ While the LongEval dataset contains changes in all components of all types, the 
 Things that sound related but are not yet checked/incorporated are appended to this sentence~\cite{li:2022}.
 
 Integrate prior work into the topology by Keller et al.~\cite{keller:2024}. E.g., transfer of relevance labels to (near-)duplicate documents~\cite{froebe:2021a}, documents that change their content and therefore might be not relevant anymore~\cite{froebe:2022d}, etc (Harrie Oosterhuis likely has much on this).
+
+
+
+\paragraph{Web Dynamics.} Web page changes every 90 days on average...
+
+\paragraph{Caching in IR.}
+
+
+\paragraph{Query Rewriting with Keyqueries.} {\color{red} Maik.}
 
