--- a/paper/table-examples.tex
+++ b/paper/table-examples.tex
@@ -1,33 +1,26 @@
 
-\begin{table}[t]%
-    \small%
-    \centering%
-    \renewcommand{\tabcolsep}{4pt}%
-    \caption{}%
-    \label{table-examples-2}%
-    \begin{tabular}[t]{@{}lllll@{}}
+\begin{table}[t]
+    \centering
+    \renewcommand{\tabcolsep}{4pt}
+    \caption{Historical relevance feedback observed at timestamp~$t_{0}$ for a query $q := $~\texttt{bird song} that is to be applied at timestamp~$t_{1}$. Transferring $t_{0}$ to $t_{1}$ would introduce errors, whereas our counterfactual query rewriting always uses the correct $t_{0}$ observations.}
+    \label{table-examples-2}
+    \vspace*{-2ex}
+    \begin{tabular}[t]{@{}lllc@{}}
     \toprule
-    {\bfseries Query} & \multicolumn{2}{@{}c@{}}{\bfseries Document} & {\bfseries Comment} & {\bfseries Type}\\
-    \cmidrule(l@{\tabcolsep}r@{\tabcolsep}){2-3}
+   \multicolumn{2}{@{}c@{}}{\bfseries Document} & {\bfseries Comment} & {\bfseries Type}\\
+    \cmidrule(r@{\tabcolsep}){1-2}
     
-    & Version~1 ($t_0$) & Version~2 ($t_1$)\\
-    \midrule
-    
-    \multirow{3}{*}{\footnotesize \shortstack[l]{Query}}
-    & \multirow{3}{*}{\footnotesize \shortstack[l]{}} & \multirow{3}{*}{\footnotesize \shortstack[l]{\\ {\color{blue} \emph{Deposit Solutions}}\\ Crunchbase {\color{blue} \emph{Company}}\\ {\color{blue} \emph{Profile}} \ldots\vspace*{-.1cm}}} & \multirow{3}{*}{\footnotesize \shortstack[l]{Website initially\\ crawled}} &  \multirow{3}{*}{\footnotesize \shortstack[l]{\texttt{CREATE}}}\\\\\\
+    Timestamp~$t_0$ &  Timestamp~$t_1$\\
     \midrule
 
-    \multirow{3}{*}{\footnotesize \shortstack[l]{Query}}
-    & \multirow{3}{*}{\footnotesize \shortstack[l]{\\ {\color{blue} \emph{Deposit Solutions}}\\ Crunchbase {\color{blue} \emph{Company}}\\ {\color{blue} \emph{Profile}} \ldots\vspace*{-.1cm}}} & \multirow{3}{*}{\footnotesize \shortstack[l]{}} & \multirow{3}{*}{\footnotesize \shortstack[l]{Website removed \\ from index}}  &   \multirow{3}{*}{\footnotesize \shortstack[l]{\texttt{DELETE}}}\\\\\\
+    \multirow{2}{*}{ \shortstack[l]{\\ Alphabetical list of {\color{blue} \emph{bird}} \\ {\color{blue} \emph{songs}} you may like \ldots\vspace*{-.1cm}}} & \multirow{2}{*}{ \shortstack[l]{~~~~~~~~~---}} & \multirow{2}{*}{ \shortstack[l]{Document deleted \\ from the web}}  &   \multirow{2}{*}{ \shortstack[l]{\texttt{DELETE}}}\\\\
     \midrule
 
-    \multirow{3}{*}{\footnotesize \shortstack[l]{Query}}
-    & \multirow{3}{*}{\footnotesize \shortstack[l]{\\ {\color{blue} \emph{Deposit Solutions}}\\ Crunchbase {\color{blue} \emph{Company}}\\ {\color{blue} \emph{Profile}} \ldots\vspace*{-.1cm}}} & \multirow{3}{*}{\footnotesize \shortstack[l]{\\ {\color{blue} \emph{Deposit Solutions}}\\ Crunchbase {\color{blue} \emph{Company}}}} & \multirow{3}{*}{\footnotesize \shortstack[l]{Website content changed \\ relevance stays the same}}  &   \multirow{3}{*}{\footnotesize \shortstack[l]{\texttt{UPDATE}}}\\\\\\
+    \multirow{2}{*}{ \shortstack[l]{\\ Best phone ring tone?\\ Enjoy {\color{blue} \emph{bird songs}} \ldots\vspace*{-.1cm}}} & \multirow{2}{*}{ \shortstack[l]{\\ Get phone tones from the\\ charts for free \ldots\vspace*{-.1cm}}}  & \multirow{2}{*}{ \shortstack[l]{Document became \\ non-relevant}}  & \multirow{2}{*}{ \shortstack[l]{\texttt{UPDATE}}}\\\\
+
     \midrule
 
-    \multirow{3}{*}{\footnotesize \shortstack[l]{Query}}
-    & \multirow{3}{*}{\footnotesize \shortstack[l]{\\ {\color{blue} \emph{Deposit Solutions}}\\ Crunchbase {\color{blue} \emph{Company}}\\ {\color{blue} \emph{Profile}} \ldots\vspace*{-.1cm}}} & \multirow{3}{*}{\footnotesize \shortstack[l]{\\ {\color{blue} \emph{Deposit Solutions}}\\ Crunchbase {\color{blue} \emph{Company}}}} & \multirow{3}{*}{\footnotesize \shortstack[l]{Website content changed \\ relevance changed}}  &   \multirow{3}{*}{\footnotesize \shortstack[l]{\texttt{UPDATE}}}\\\\\\
-    \midrule
+    \multirow{2}{*}{ \shortstack[l]{\\ 311~{\color{blue} \emph{songs by birds}} from\\ France by species \ldots\vspace*{-.1cm}}} & \multirow{2}{*}{ \shortstack[l]{\\ 312~{\color{blue} \emph{songs by birds}} from\\ France by species \ldots\vspace*{-.1cm}}}  & \multirow{2}{*}{ \shortstack[l]{Document remains \\ relevant}}  & \multirow{2}{*}{ \shortstack[l]{\texttt{UPDATE}}}\\\\
 
     \bottomrule
 
