--- a/paper/table-examples.tex
+++ b/paper/table-examples.tex
@@ -3,7 +3,7 @@
     \centering
     \renewcommand{\tabcolsep}{4pt}
     \caption{Historical relevance feedback observed at timestamp~$t_{0}$ for a query $q := $~\texttt{bird song} that is to be applied at timestamp~$t_{1}$. Transferring $t_{0}$ to $t_{1}$ would introduce errors, whereas our counterfactual query rewriting always uses the correct $t_{0}$ observations.}
-    \label{table-examples-2}
+    \label{table-examples}
     \vspace*{-2ex}
     \begin{tabular}[t]{@{}lllc@{}}
     \toprule
