--- a/paper/ecir25-longeval-lit.bib
+++ b/paper/ecir25-longeval-lit.bib
@@ -65,6 +65,19 @@
   year =                     2022
 }
 
+@InProceedings{gollub:2013a,
+  author =                   {Tim Gollub and Matthias Hagen and Maximilian Michel and Benno Stein},
+  booktitle =                {36th International ACM Conference on Research and Development in Information Retrieval (SIGIR 2013)},
+  doi =                      {10.1145/2484028.2484181},
+  editor =                   {Cathal Gurrin and {Gareth J.F.} Jones and Diane Kelly and Udo Kruschwitz and Maarten {de Rijke} and Tetsuya Sakai and P{\'a}raic Sheridan},
+  month =                    jul,
+  pages =                    {981--984},
+  publisher =                {ACM},
+  site =                     {Dublin},
+  title =                    {{From Keywords to Keyqueries: Content Descriptors for the Web}},
+  year =                     2013
+}
+
 @article{jaleel:2004,
   title={UMass at TREC 2004: Novelty and HARD},
   author={Abdul-Jaleel, Nasreen and Allan, James and Croft, W Bruce and Diaz, Fernando and Larkey, Leah and Li, Xiaoyan and Smucker, Mark D and Wade, Courtney},
