--- a/paper/ecir25-longeval-lit.bib
+++ b/paper/ecir25-longeval-lit.bib
@@ -188,3 +188,201 @@
   url          = {https://doi.org/10.1145/1526709.1526711},
   doi          = {10.1145/1526709.1526711}
 }
+
+
+
+@inproceedings{DBLP:conf/clef/AlkhalifaBDEAFG24,
+  author       = {Rabab Alkhalifa and
+                  Hsuvas Borkakoty and
+                  Romain Deveaud and
+                  Alaa El{-}Ebshihy and
+                  Luis Espinosa Anke and
+                  Tobias Fink and
+                  Petra Galusc{\'{a}}kov{\'{a}} and
+                  Gabriela Gonz{\'{a}}lez S{\'{a}}ez and
+                  Lorraine Goeuriot and
+                  David Iommi and
+                  Maria Liakata and
+                  Harish Tayyar Madabushi and
+                  Pablo Medina{-}Alias and
+                  Philippe Mulhem and
+                  Florina Piroi and
+                  Martin Popel and
+                  Arkaitz Zubiaga},
+  title        = {Extended Overview of the {CLEF} 2024 LongEval Lab on Longitudinal
+                  Evaluation of Model Performance},
+  booktitle    = {{CLEF} (Working Notes)},
+  series       = {{CEUR} Workshop Proceedings},
+  volume       = {3740},
+  pages        = {2267--2289},
+  publisher    = {CEUR-WS.org},
+  year         = {2024}
+}
+
+@inproceedings{DBLP:conf/clef/AlkhalifaBBCDEA23,
+  author       = {Rabab Alkhalifa and
+                  Iman Munire Bilal and
+                  Hsuvas Borkakoty and
+                  Jos{\'{e}} Camacho{-}Collados and
+                  Romain Deveaud and
+                  Alaa El{-}Ebshihy and
+                  Luis Espinosa Anke and
+                  Gabriela Nicole Gonz{\'{a}}lez S{\'{a}}ez and
+                  Petra Galusc{\'{a}}kov{\'{a}} and
+                  Lorraine Goeuriot and
+                  Elena Kochkina and
+                  Maria Liakata and
+                  Daniel Loureiro and
+                  Philippe Mulhem and
+                  Florina Piroi and
+                  Martin Popel and
+                  Christophe Servan and
+                  Harish Tayyar Madabushi and
+                  Arkaitz Zubiaga},
+  title        = {Extended Overview of the {CLEF-2023} LongEval Lab on Longitudinal
+                  Evaluation of Model Performance},
+  booktitle    = {{CLEF} (Working Notes)},
+  series       = {{CEUR} Workshop Proceedings},
+  volume       = {3497},
+  pages        = {2181--2203},
+  publisher    = {CEUR-WS.org},
+  year         = {2023}
+}
+
+
+@inproceedings{DBLP:conf/wsdm/AdarTDE09,
+  author       = {Eytan Adar and
+                  Jaime Teevan and
+                  Susan T. Dumais and
+                  Jonathan L. Elsas},
+  title        = {The web changes everything: understanding the dynamics of web content},
+  booktitle    = {{WSDM}},
+  pages        = {282--291},
+  publisher    = {{ACM}},
+  year         = {2009}
+}
+
+@inproceedings{DBLP:conf/sigir/Dumais14,
+  author       = {Susan T. Dumais},
+  title        = {Putting searchers into search},
+  booktitle    = {{SIGIR}},
+  pages        = {1--2},
+  publisher    = {{ACM}},
+  year         = {2014}
+}
+
+@inproceedings{DBLP:conf/sigir/TikhonovBBOKG13,
+  author       = {Alexey Tikhonov and
+                  Ivan Bogatyy and
+                  Pavel Burangulov and
+                  Liudmila Ostroumova and
+                  Vitaliy Koshelev and
+                  Gleb Gusev},
+  title        = {Studying page life patterns in dynamical web},
+  booktitle    = {{SIGIR}},
+  pages        = {905--908},
+  publisher    = {{ACM}},
+  year         = {2013}
+}
+
+
+@inproceedings{DBLP:conf/wsdm/ElsasD10,
+  author       = {Jonathan L. Elsas and
+                  Susan T. Dumais},
+  title        = {Leveraging temporal dynamics of document content in relevance ranking},
+  booktitle    = {{WSDM}},
+  pages        = {1--10},
+  publisher    = {{ACM}},
+  year         = {2010}
+}
+
+@inproceedings{DBLP:conf/sigir/Soboroff06,
+  author       = {Ian Soboroff},
+  title        = {Dynamic test collections: measuring search effectiveness on the live
+                  web},
+  booktitle    = {{SIGIR}},
+  pages        = {276--283},
+  publisher    = {{ACM}},
+  year         = {2006}
+}
+
+@inproceedings{DBLP:conf/wsdm/TylerT10,
+  author       = {Sarah K. Tyler and
+                  Jaime Teevan},
+  title        = {Large scale query log analysis of re-finding},
+  booktitle    = {{WSDM}},
+  pages        = {191--200},
+  publisher    = {{ACM}},
+  year         = {2010}
+}
+
+@article{DBLP:journals/sigir/SilversteinHMM99,
+  author       = {Craig Silverstein and
+                  Monika Henzinger and
+                  Hannes Marais and
+                  Michael Moricz},
+  title        = {Analysis of a Very Large Web Search Engine Query Log},
+  journal      = {{SIGIR} Forum},
+  volume       = {33},
+  number       = {1},
+  pages        = {6--12},
+  year         = {1999}
+}
+
+@article{DBLP:journals/csur/CamposDJJ14,
+  author       = {Ricardo Campos and
+                  Ga{\"{e}}l Dias and
+                  Al{\'{\i}}pio M{\'{a}}rio Jorge and
+                  Adam Jatowt},
+  title        = {Survey of Temporal Information Retrieval and Related Applications},
+  journal      = {{ACM} Comput. Surv.},
+  volume       = {47},
+  number       = {2},
+  pages        = {15:1--15:41},
+  year         = {2014}
+}
+
+@article{DBLP:journals/ftir/KanhabuaBN15,
+  title = {Temporal Information Retrieval},
+  author = {Kanhabua, Nattiya and Blanco, Roi and N{\o}rv{\aa}g, Kjetil},
+  year = {2015},
+  journal = {Found. Trends Inf. Retr.},
+  volume = {9},
+  number = {2},
+  pages = {91--208},
+  doi = {10.1561/1500000043},
+  bibsource = {dblp computer science bibliography, https://dblp.org},
+  keywords = {done},
+  timestamp = {Thu, 12 Mar 2020 15:55:11 +0100},
+  file = {/Users/jueri/Zotero/storage/HDFLWTHF/Kanhabua et al. - 2015 - Temporal information retrieval.pdf}
+}
+
+
+@inproceedings{DBLP:conf/sigir/Baeza-YatesGJMPS07,
+  author       = {Ricardo A. Baeza{-}Yates and
+                  Aristides Gionis and
+                  Flavio Junqueira and
+                  Vanessa Murdock and
+                  Vassilis Plachouras and
+                  Fabrizio Silvestri},
+  title        = {The impact of caching on search engines},
+  booktitle    = {{SIGIR}},
+  pages        = {183--190},
+  publisher    = {{ACM}},
+  year         = {2007}
+}
+
+@inproceedings{DBLP:conf/www/CambazogluJPBCLB10,
+  author       = {Berkant Barla Cambazoglu and
+                  Flavio Paiva Junqueira and
+                  Vassilis Plachouras and
+                  Scott A. Banachowski and
+                  Baoqiu Cui and
+                  Swee Lim and
+                  Bill Bridge},
+  title        = {A refreshing perspective of search engine caching},
+  booktitle    = {{WWW}},
+  pages        = {181--190},
+  publisher    = {{ACM}},
+  year         = {2010}
+}
