--- a/paper/ecir25-longeval.sty
+++ b/paper/ecir25-longeval.sty
@@ -19,4 +19,11 @@
 %\urlstyle{rm}
 %
 
+\newcommand{\Ni}{(1)~}
+\newcommand{\Nii}{(2)~}
+\newcommand{\Niii}{(3)~}
+\newcommand{\Niv}{(4)~}
+\newcommand{\Nv}{(5)~}
+
+
 \graphicspath{{../figures}}
